# apps/product-catalog/src/main/java/com/example/productcatalog/domain/model/Brand.java
@@ -1,24 +1,42 @@
 package com.example.productcatalog.domain.model;
 
+import io.quarkus.hibernate.orm.panache.PanacheEntityBase;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
-import javax.persistence.*;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Lob;
+import jakarta.persistence.Table;
+
+import java.net.URI;
+import java.time.Instant;
 
 @Data
 @NoArgsConstructor
+@AllArgsConstructor
+@Builder
 @Entity
 @Table(name = "brands")
-public class Brand {
+public class Brand extends PanacheEntityBase {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
     private String name;
-    private String description;
-    private String website;
-    private String logo;
 
-    // Constructors, getters, and setters can be generated by Lombok
+    @Lob
+    private String description; // supports rich text and i18n
+
+    private URI website;
+    private URI logo;
+    private Instant createdAt;
+    private Instant updatedAt;
+
+   
 }
